[npm] Changes package name to be unique

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "validator",
+  "name": "valerie",
   "version": "0.1.0",
   "description": "Simple JS object validator",
   "main": "src/index.js",
