--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "valerie",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Simple JS object validator",
   "main": "src/index.js",
   "scripts": {
-    "test": "jasmine-node test --verbose --matchall"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,13 @@
   },
   "homepage": "https://github.com/developerdizzle/validator",
   "devDependencies": {
-    "jasmine-node": "^1.14.5"
+    "babel-jest": "^11.0.1",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "jest-cli": "^11.0.1"
+  },
+  "jest": {
+    "testDirectoryName": "tests",
+    "verbose": true
   }
 }
