--- a/package.json
+++ b/package.json
@@ -26,10 +26,18 @@
     "babel-jest": "^11.0.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-3": "^6.5.0",
     "jest-cli": "^11.0.1"
   },
   "jest": {
     "testDirectoryName": "tests",
-    "verbose": true
+    "verbose": true,
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/\\.c9/"
+    ],
+    "unmockedModulePathPatterns": [
+      "src"
+    ]
   }
 }
