--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "valerie",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "Simple JS object validator",
-  "main": "src/index.js",
+  "main": "lib",
   "scripts": {
+    "build": "babel src --out-dir lib",
     "test": "jest"
   },
   "repository": {
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/developerdizzle/valerie",
   "devDependencies": {
+    "babel-cli": "^6.7.5",
     "babel-jest": "^11.0.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -38,7 +40,8 @@
       "/\\..*/"
     ],
     "unmockedModulePathPatterns": [
-      "src"
+      "src",
+      "lib"
     ]
   }
 }
