--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.7.0",
   "description": "Simple JS object validator",
   "main": "lib",
+  "engines" {
+    "node": "5.10.1"
+  }
   "scripts": {
     "build": "rm -rf lib && babel src --out-dir lib",
     "test": "jest"
