--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple JS object validator",
   "main": "lib",
   "engines": {
-    "node": "5.10.1"
+    "node": "^5.10.1"
   },
   "scripts": {
     "build": "rm -rf lib && babel src --out-dir lib",
