--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Simple JS object validator",
   "main": "lib",
   "engines": {
-    "node": "^5.10.1"
+    "node": "^5.11.0"
   },
   "scripts": {
     "build": "rm -rf lib && babel src --out-dir lib",
+    "lint": "eslint src",
     "test": "jest"
   },
   "repository": {
@@ -29,10 +30,15 @@
   "homepage": "https://github.com/developerdizzle/valerie",
   "devDependencies": {
     "babel-cli": "^6.7.5",
+    "babel-eslint": "^6.0.4",
     "babel-jest": "^11.0.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0",
+    "eslint": "^2.9.0",
+    "eslint-config-standard": "^5.2.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
     "jest-cli": "^11.0.1"
   },
   "jest": {
