--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": [
-      "es2015",
-      "stage-3"
-      ]
+    "es2015",
+    "stage-3"
+  ],
+  "plugins": [
+    "import-glob"
+  ]
 }
