--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valerie",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "description": "Simple JS object validator",
   "main": "lib",
   "engines": {
@@ -32,6 +32,7 @@
     "babel-cli": "^6.7.5",
     "babel-eslint": "^6.0.4",
     "babel-jest": "^12.0.2",
+    "babel-plugin-import-glob": "^1.0.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0",
