--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "rm -rf lib && npm run lint && babel src --out-dir lib",
-    "lint": "eslint src",
+    "lint": "eslint src test",
     "test": "jest"
   },
   "repository": {
